--- a/app/src/main/res/layout/admin_bus_ticket_item.xml
+++ b/app/src/main/res/layout/admin_bus_ticket_item.xml
@@ -2,34 +2,36 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="325dp">
+    android:layout_height="315dp"
+    android:background="@drawable/panel"
+    android:elevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusTicketHeaderConstraintLayout"
-        android:layout_width="409dp"
-        android:layout_height="128dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="407dp"
-            android:layout_height="126dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
+                android:layout_width="118dp"
                 android:layout_height="match_parent">
 
                 <ImageView
                     android:id="@+id/adminBusTicketImgV"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="101dp"
+                    android:layout_height="98dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -38,14 +40,13 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="170dp"
+                android:layout_width="161dp"
                 android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/adminBusTicketUserNameVal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_width="118dp"
+                    android:layout_height="59dp"
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/montserrat_bold"
                     android:text="VO DUY NHAN"
@@ -77,6 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/montserrat_bold"
+                    android:gravity="center"
                     android:text="Seat 26"
                     android:textColor="@color/blue"
                     android:textSize="20sp"
@@ -86,14 +88,16 @@
 
                 <TextView
                     android:id="@+id/adminBusTicketStatusVal"
-                    android:layout_width="78dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
                     android:fontFamily="@font/montserrat_medium"
-                    android:text="Đã thanh toán"
-                    android:textColor="#f45695"
                     android:gravity="right"
+                    android:text="Đã thanh toán"
+                    android:textAlignment="gravity"
+                    android:textColor="#f45695"
                     app:layout_constraintEnd_toEndOf="@+id/adminBusTicketSeatVal"
+                    app:layout_constraintStart_toStartOf="@+id/adminBusTicketSeatVal"
                     app:layout_constraintTop_toBottomOf="@+id/adminBusTicketSeatVal" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
@@ -101,15 +105,16 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusTicketBodyConstraintLayout"
-        android:layout_width="410dp"
-        android:layout_height="90dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adminBusTicketHeaderConstraintLayout">
 
         <LinearLayout
-            android:layout_width="408dp"
-            android:layout_height="90dp"
+            android:layout_width="wrap_content"
+            android:layout_height="85dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -117,7 +122,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="131dp"
+                android:layout_width="149dp"
                 android:layout_height="match_parent">
 
                 <TextView
@@ -127,6 +132,7 @@
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/montserrat_medium"
                     android:text="Hà Nội"
+                    android:gravity="center"
                     android:textColor="#a4a3a8"
                     android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -135,8 +141,8 @@
 
                 <TextView
                     android:id="@+id/adminBusTicketStartTimeVal"
-                    android:layout_width="121dp"
-                    android:layout_height="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/montserrat_medium"
                     android:gravity="center"
@@ -149,7 +155,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="145dp"
+                android:layout_width="95dp"
                 android:layout_height="match_parent">
 
                 <TextView
@@ -158,6 +164,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="32dp"
                     android:text="2 h 25 m"
+                    android:gravity="center"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.494"
@@ -175,6 +182,7 @@
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/montserrat_medium"
                     android:text="Hà Giang"
+                    android:gravity="center"
                     android:textColor="#a4a3a8"
                     android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -183,8 +191,8 @@
 
                 <TextView
                     android:id="@+id/adminBusTicketEndTimeVal"
-                    android:layout_width="121dp"
-                    android:layout_height="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/montserrat_medium"
                     android:gravity="center"
@@ -199,15 +207,16 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusTicketIconConstraintLayout"
-        android:layout_width="415dp"
-        android:layout_height="59dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adminBusTicketBodyConstraintLayout">
 
         <LinearLayout
-            android:layout_width="412dp"
-            android:layout_height="51dp"
+            android:layout_width="393dp"
+            android:layout_height="37dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -215,7 +224,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="98dp"
+                android:layout_width="110dp"
                 android:layout_height="match_parent">
 
                 <ImageView
@@ -226,11 +235,11 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/circle_icon" />
+                    app:srcCompat="@drawable/dark_circle_icon" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="209dp"
+                android:layout_width="179dp"
                 android:layout_height="match_parent">
 
                 <ImageView
@@ -256,28 +265,37 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/circle_icon" />
+                    app:srcCompat="@drawable/dark_circle_icon" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusTicketFooterConstraintLayout"
-        android:layout_width="416dp"
-        android:layout_height="48dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adminBusTicketIconConstraintLayout">
 
         <Button
             android:id="@+id/adminBusTicketDeleteBtn"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
             android:text="Xóa"
+            android:textAllCaps="false"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
