--- a/app/src/main/res/layout/activity_admin_bus_operator.xml
+++ b/app/src/main/res/layout/activity_admin_bus_operator.xml
@@ -2,23 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#f4f4f4"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/adminBusOperatorAddBtn"
-        android:layout_width="348dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="16dp"
-        android:text="Thêm mới"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/adminBusOperatorRV"
-        android:layout_width="368dp"
-        android:layout_height="578dp"
+        android:layout_width="403dp"
+        android:layout_height="658dp"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorListHeader" />
@@ -56,6 +49,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.063"
             app:layout_constraintStart_toEndOf="@+id/adminBusOperatorListBackBtn"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <ImageButton
+            android:id="@+id/adminBusOperatorAddBtn"
+            android:layout_width="27dp"
+            android:layout_height="21dp"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/ic_plus_solid"
+            android:contentDescription="@string/back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
