--- a/app/src/main/res/layout/activity_admin_bus_operator_create.xml
+++ b/app/src/main/res/layout/activity_admin_bus_operator_create.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/adminBusOperatorListBackBtn"
+            android:id="@+id/adminBusOperatorCreateBackBtn"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="8dp"
@@ -36,7 +36,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.063"
-            app:layout_constraintStart_toEndOf="@+id/adminBusOperatorListBackBtn"
+            app:layout_constraintStart_toEndOf="@+id/adminBusOperatorCreateBackBtn"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -129,7 +129,8 @@
                 <EditText
                     android:id="@+id/adminBusOperatorVNFlagEt"
                     android:layout_width="90dp"
-                    android:layout_height="57dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:background="@drawable/custom_form_input"
                     android:clickable="false"
                     android:drawableStart="@drawable/vietnam_flag"
@@ -142,13 +143,13 @@
                     android:inputType="phone"
                     android:padding="12dp"
                     app:layout_constraintStart_toStartOf="@+id/layoutBusOperatorName"
-                    tools:layout_editor_absoluteY="403dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/layoutBusOperatorName" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/layoutBusOperatorPhone"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="287dp"
+                    android:layout_height="58dp"
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="15dp"
                     android:fontFamily="@font/montserrat"
@@ -158,7 +159,7 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/adminBusOperatorPhoneCreateEt"
-                        android:layout_width="289dp"
+                        android:layout_width="280dp"
                         android:layout_height="53dp"
                         android:inputType="phone" />
 
