--- a/app/src/main/res/layout/admin_bus_list_item.xml
+++ b/app/src/main/res/layout/admin_bus_list_item.xml
@@ -2,22 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/panel"
-    android:elevation="10dp"
     android:layout_width="wrap_content"
-    android:layout_height="325dp">
+    android:layout_height="280dp"
+    android:background="@drawable/panel"
+    android:elevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusListHeaderConstraintLayout"
-        android:layout_width="408dp"
-        android:layout_height="118dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/startEndHeader"
-            android:layout_width="410dp"
-            android:layout_height="114dp"
+            android:layout_width="404dp"
+            android:layout_height="77dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +35,7 @@
                     android:fontFamily="@font/montserrat_bold"
                     android:gravity="center"
                     android:text="Hà Nội"
+                    android:textAlignment="center"
                     android:textSize="25sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -52,6 +54,7 @@
                     android:fontFamily="@font/montserrat_semibold_italic"
                     android:gravity="center"
                     android:text="Phương Trang"
+                    android:textAlignment="center"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -67,9 +70,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat_bold"
-                    android:text="Hà Giang"
-                    android:textSize="25sp"
                     android:gravity="center"
+                    android:text="Hà Giang"
+                    android:textAlignment="center"
+                    android:textSize="25sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -80,16 +84,16 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusListBodyConstraintLayout"
-        android:layout_width="410dp"
-        android:layout_height="103dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adminBusListHeaderConstraintLayout">
 
         <LinearLayout
-            android:layout_width="409dp"
-            android:layout_height="95dp"
+            android:layout_width="411dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -107,6 +111,7 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/montserrat_medium"
                     android:text="Khởi hành"
+                    android:textAlignment="center"
                     android:textColor="#a4a3a8"
                     android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -121,6 +126,7 @@
                     android:fontFamily="@font/montserrat_medium"
                     android:gravity="center"
                     android:text="15:00 04/04/2023"
+                    android:textAlignment="center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/adminBusStartPointTitle" />
@@ -136,6 +142,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="24dp"
                     android:text="2 h 25 m"
+                    android:fontFamily="@font/montserrat"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -153,6 +160,7 @@
                     android:fontFamily="@font/montserrat_medium"
                     android:gravity="center"
                     android:text="Kết thúc"
+                    android:textAlignment="center"
                     android:textColor="#a4a3a8"
                     android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -161,12 +169,13 @@
 
                 <TextView
                     android:id="@+id/adminBusEndTimeVal"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/montserrat_medium"
                     android:gravity="center"
                     android:text="15:00 04/04/2023"
+                    android:textAlignment="center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/adminBusEndPointTitle" />
@@ -176,14 +185,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusListTravelConstraintLayout"
-        android:layout_width="408dp"
-        android:layout_height="26dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adminBusListBodyConstraintLayout">
 
         <LinearLayout
             android:layout_width="408dp"
-            android:layout_height="26dp"
+            android:layout_height="48dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -201,7 +210,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/circle_icon" />
+                    app:srcCompat="@drawable/dark_circle_icon" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -241,21 +250,21 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/circle_icon" />
+                    app:srcCompat="@drawable/dark_circle_icon" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="404dp"
-        android:layout_height="62dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adminBusListTravelConstraintLayout">
 
         <LinearLayout
-            android:layout_width="392dp"
+            android:layout_width="0dp"
             android:layout_height="60dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -285,6 +294,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginBottom="4dp"
                     android:text="Limousine"
+                    android:fontFamily="@font/montserrat"
                     app:layout_constraintBottom_toBottomOf="@+id/adminBusPriceVal"
                     app:layout_constraintStart_toEndOf="@+id/adminBusPriceVal" />
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -297,7 +307,10 @@
                     android:id="@+id/adminBusDeleteItemBtn"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:text="DELETE"
+                    android:text="Xóa"
+                    android:fontFamily="@font/montserrat"
+                    android:textAllCaps="false"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.488"
