--- a/app/src/main/res/layout/admin_bus_operator_item.xml
+++ b/app/src/main/res/layout/admin_bus_operator_item.xml
@@ -3,32 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="110dp"
+    android:background="@drawable/panel"
+    android:elevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusOperatorHeaderConstraintLayout"
         android:layout_width="407dp"
-        android:layout_height="150dp"
+        android:layout_height="112dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="405dp"
-            android:layout_height="148dp"
+            android:layout_width="399dp"
+            android:layout_height="112dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="142dp"
+                android:layout_width="117dp"
                 android:layout_height="match_parent">
 
                 <ImageView
                     android:id="@+id/adminBusOperatorImgV"
-                    android:layout_width="132dp"
-                    android:layout_height="133dp"
+                    android:layout_width="106dp"
+                    android:layout_height="86dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -37,8 +39,8 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_width="284dp"
+                android:layout_height="110dp">
 
                 <TextView
                     android:id="@+id/adminBusOperatorItemTitle"
@@ -48,14 +50,14 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/montserrat_bold"
                     android:text="Phương Trang"
-                    android:textSize="30sp"
+                    android:textSize="15sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/adminBusOperatorPhoneIconImgV"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
+                    android:layout_width="19dp"
+                    android:layout_height="21dp"
                     android:layout_marginTop="8dp"
                     app:layout_constraintStart_toStartOf="@+id/adminBusOperatorItemTitle"
                     app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorItemTitle"
@@ -68,31 +70,23 @@
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/montserrat"
                     android:text="0769597789"
-                    android:textSize="20sp"
+                    android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="@+id/adminBusOperatorPhoneIconImgV"
                     app:layout_constraintStart_toEndOf="@+id/adminBusOperatorPhoneIconImgV"
                     app:layout_constraintTop_toTopOf="@+id/adminBusOperatorPhoneIconImgV" />
+
+                <Button
+                    android:id="@+id/adminBusOperatorDeleteBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Xóa"
+                    android:textAllCaps="false"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/adminBusOperatorFooterConstraintLayout"
-        android:layout_width="411dp"
-        android:layout_height="42dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorHeaderConstraintLayout">
-
-        <Button
-            android:id="@+id/adminBusOperatorDeleteBtn"
-            android:layout_width="406dp"
-            android:layout_height="40dp"
-            android:text="Xóa"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
