--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -15,7 +15,7 @@
         <ScrollView
             android:id="@+id/scrollView2"
 
-            android:layout_width="423dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/app_background"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -26,6 +26,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
+
                 android:layout_height="wrap_content">
 
                 <ImageView
@@ -164,7 +165,7 @@
                                 android:focusable="false"
                                 android:fontFamily="@font/montserrat_bold"
                                 android:shadowColor="#fff"
-                                android:text="Hà Nội"
+                                android:text=""
                                 android:textSize="18sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -195,7 +196,7 @@
                                 android:focusable="false"
                                 android:fontFamily="@font/montserrat_bold"
                                 android:shadowColor="#fff"
-                                android:text="Hà Giang"
+                                android:text=""
                                 android:textSize="18sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
