--- a/app/src/main/res/layout/activity_bus_search.xml
+++ b/app/src/main/res/layout/activity_bus_search.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f4f4f4"
+    android:fitsSystemWindows="true"
     tools:context=".BusSearch">
     <LinearLayout
         android:id="@+id/header"
@@ -116,7 +117,7 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/loading"
-        android:layout_width="0dp"
+        android:layout_width="200dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
@@ -128,15 +129,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.4"
         app:lottie_loop="true"
-        app:lottie_speed="1"
+        app:lottie_autoPlay="true"
+        app:lottie_rawRes="@raw/bus"
         tools:ignore="ContentDescription"
         />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_bus_search"
-        android:layout_width="match_parent"
-        android:padding="20dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/search_filter"
-        />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_bus_search"
+            android:layout_width="0dp"
+            android:padding="20dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/search_filter"
+            />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
