--- a/app/src/main/res/layout/admin_bus_operator_item.xml
+++ b/app/src/main/res/layout/admin_bus_operator_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="110dp"
+    android:layout_margin="10dp"
     android:background="@drawable/panel"
     android:elevation="10dp">
 
