--- a/app/src/main/res/layout/activity_admin_bus_operator.xml
+++ b/app/src/main/res/layout/activity_admin_bus_operator.xml
@@ -10,7 +10,9 @@
         android:id="@+id/adminBusOperatorRV"
         android:layout_width="403dp"
         android:layout_height="658dp"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
