--- a/app/src/main/res/layout/item_ve.xml
+++ b/app/src/main/res/layout/item_ve.xml
@@ -6,12 +6,15 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/item_ve_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:background="@drawable/panel"
+        android:clickable="true"
         android:elevation="10dp"
         android:orientation="vertical"
+        android:foreground="?android:attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -193,6 +196,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/show_ma_dat_cho"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
