--- a/app/src/main/res/layout/activity_admin_bus.xml
+++ b/app/src/main/res/layout/activity_admin_bus.xml
@@ -8,8 +8,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/adminBusRV"
-        android:layout_width="407dp"
-        android:layout_height="663dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
