--- a/app/src/main/res/layout/activity_admin_bus_ticket.xml
+++ b/app/src/main/res/layout/activity_admin_bus_ticket.xml
@@ -10,6 +10,7 @@
         android:id="@+id/adminBusTicketRV"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         android:color="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
