add edit text for policy bus

--- a/app/src/main/res/layout/activity_admin_bus_create.xml
+++ b/app/src/main/res/layout/activity_admin_bus_create.xml
@@ -224,7 +224,7 @@
                     android:hint="Loại xe"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/adminCreateBusEndTimeTimePickerBtn">
+                    app:layout_constraintTop_toBottomOf="@+id/edtPolicy">
 
                     <AutoCompleteTextView
                         android:id="@+id/busTypeAutoCompleteTextView"
@@ -256,6 +256,22 @@
                         android:inputType="phone"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/edtPolicy"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/black_stroke_and_transparent_solid_panel"
+                    android:fontFamily="@font/montserrat"
+                    android:gravity="top"
+                    android:hint="Nội dung"
+                    android:inputType="textMultiLine"
+                    android:padding="15dp"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="@+id/endPointLayout"
+                    app:layout_constraintStart_toStartOf="@+id/endPointLayout"
+                    app:layout_constraintTop_toBottomOf="@+id/adminCreateBusEndTimeTimePickerBtn" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/layoutBusPrice"
