--- a/app/src/main/res/layout/activity_bus_search.xml
+++ b/app/src/main/res/layout/activity_bus_search.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#f4f4f4"
     android:fitsSystemWindows="true"
-    tools:context=".BusSearch">
+    tools:context=".User.Screen.BusSearch">
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
@@ -137,7 +137,6 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_bus_search"
             android:layout_width="0dp"
-            android:padding="20dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
