--- a/app/src/main/res/layout/fragment_bus_search_item.xml
+++ b/app/src/main/res/layout/fragment_bus_search_item.xml
@@ -2,19 +2,25 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bus_search_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="20dp"
     android:background="@drawable/panel"
+    android:clickable="true"
     android:elevation="5dp"
-    android:layout_marginBottom="20dp"
+    android:foreground="?android:attr/selectableItemBackground"
     tools:context=".BusSearchItem">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="120dp"
@@ -22,63 +28,65 @@
             android:padding="10dp"
 
             >
+
             <LinearLayout
-                android:layout_weight="1"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
                     <RelativeLayout
-                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        >
+                        android:layout_weight="1">
+
                         <TextView
                             android:id="@+id/busTimeStartText"
-                            android:layout_weight="1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/montserrat_bold"
                             android:text="21:00"
                             android:textColor="@color/button_color"
-                            android:textSize="21sp"
-                            android:fontFamily="@font/montserrat_bold"
-                            android:layout_centerInParent="true"
-                            />
+                            android:textSize="21sp" />
                     </RelativeLayout>
+
                     <RelativeLayout
-                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        >
+                        android:layout_weight="1">
+
                         <TextView
                             android:id="@+id/busDurationText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="6h30p"
-                            android:layout_gravity="center"
-                            android:textColor="@color/teal_700"
-                            android:textSize="10sp"
-                            android:fontFamily="@font/montserrat_light"
                             android:layout_centerInParent="true"
-                            />
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/montserrat_light"
+                            android:text="6h30p"
+                            android:textColor="@color/teal_700"
+                            android:textSize="10sp" />
                     </RelativeLayout>
+
                     <RelativeLayout
-                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        >
+                        android:layout_weight="1">
+
                         <TextView
                             android:id="@+id/busTimeEndText"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:fontFamily="@font/montserrat_bold"
                             android:text="03:30"
                             android:textColor="@color/teal_700"
-                            android:textSize="21sp"
-                            android:fontFamily="@font/montserrat_bold"
-                            android:layout_centerInParent="true"
-                            />
+                            android:textSize="21sp" />
                     </RelativeLayout>
 
                 </LinearLayout>
@@ -87,79 +95,77 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
                     <RelativeLayout
                         android:id="@+id/startIcon"
-                        android:layout_weight="1"
                         android:layout_width="20dp"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_weight="1"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        >
+                        app:layout_constraintTop_toTopOf="parent">
+
                         <ImageView
                             android:layout_width="18dp"
                             android:layout_height="18dp"
-                            android:background="@drawable/ic_location"
                             android:layout_centerInParent="true"
-                            />
+                            android:background="@drawable/ic_location" />
                     </RelativeLayout>
 
 
                     <ImageView
                         android:layout_width="18dp"
                         android:layout_height="18dp"
-                        android:background="@drawable/ic_arrow_down"
                         android:layout_gravity="center"
-                        />
+                        android:background="@drawable/ic_arrow_down" />
 
                     <RelativeLayout
-                        android:layout_weight="1"
                         android:layout_width="20dp"
                         android:layout_height="wrap_content"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
+                        android:layout_weight="1"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        >
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent">
+
                         <ImageView
+                            android:id="@+id/endIcon"
                             android:layout_width="18dp"
                             android:layout_height="18dp"
-                            android:background="@drawable/ic_location"
                             android:layout_centerInParent="true"
-                            android:id="@+id/endIcon"
-                            />
+                            android:background="@drawable/ic_location" />
                     </RelativeLayout>
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
                     <RelativeLayout
-                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        >
+                        android:layout_weight="1">
+
                         <TextView
                             android:id="@+id/busStartPointText"
-                            android:text="Bến xe Mỹ Đình"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:fontFamily="@font/montserrat_bold"
-                            android:textSize="12dp"
+                            android:text="Bến xe Mỹ Đình"
                             android:textColor="@color/button_color"
-                            />
+                            android:textSize="12dp" />
                     </RelativeLayout>
 
                     <RelativeLayout
-                        android:layout_weight="1"
                         android:layout_width="20dp"
                         android:layout_height="wrap_content"
-                        />
+                        android:layout_weight="1" />
+
                     <RelativeLayout
-                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        >
+                        android:layout_weight="1">
 
                         <TextView
                             android:id="@+id/busEndPointText"
@@ -174,91 +180,95 @@
 
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/busPricing"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="345.000đ"
-                    android:textColor="@color/button_color"
-                    android:textSize="21sp"
                     android:layout_gravity="end"
                     android:layout_marginLeft="10dp"
                     android:fontFamily="@font/montserrat_bold"
-                    />
+                    android:text="345.000đ"
+                    android:textColor="@color/button_color"
+                    android:textSize="21sp" />
+
                 <TextView
                     android:id="@+id/busNumOfLeftSeats"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="5 chỗ trống"
-                    android:textColor="@color/button_color"
                     android:layout_gravity="end"
-                    android:textSize="10sp"
                     android:layout_marginLeft="10dp"
                     android:fontFamily="@font/montserrat_medium"
-                    />
+                    android:text="5 chỗ trống"
+                    android:textColor="@color/button_color"
+                    android:textSize="10sp" />
             </LinearLayout>
         </LinearLayout>
+
         <View
-            android:layout_height="1dp"
             android:layout_width="match_parent"
-            android:background="@color/secondary_color"
+            android:layout_height="1dp"
             android:layout_marginHorizontal="10dp"
+            android:background="@color/secondary_color"
 
             />
+
         <LinearLayout
-            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:padding="10dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="10dp">
+
             <ImageView
                 android:id="@+id/busItemOperatorThumbnail"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:background="@drawable/panel"
-                />
+                android:background="@drawable/panel" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                >
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/busItemOperatorName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="Bằng Phấn"
                     android:textColor="@color/button_color"
-                    android:textSize="15sp"
-                    android:fontFamily="@font/montserrat_bold"
-                    />
+                    android:textSize="15sp" />
+
                 <TextView
                     android:id="@+id/busItemOperatorType"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="Xe thường"
                     android:textColor="@color/button_color"
-                    android:textSize="10sp"
-                    android:fontFamily="@font/montserrat_medium"
-                    />
+                    android:textSize="10sp" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
+
                     <TextView
                         android:id="@+id/busItemOperatorRating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/montserrat_bold"
                         android:text="4.5"
                         android:textColor="@color/button_color"
-                        android:textSize="15sp"
-                        android:fontFamily="@font/montserrat_bold"
-                        />
+                        android:textSize="15sp" />
 
                     <ImageView
                         android:layout_width="15dp"
@@ -273,30 +283,18 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="10dp"
-            >
-            <Button
-                android:id="@+id/detailsButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:minHeight="45dp"
-                android:text="Chi tiết"
-                android:layout_alignParentLeft="true"
-                android:textSize="10dp"
-                android:fontFamily="@font/montserrat_bold"
-                />
+            android:paddingHorizontal="10dp">
+
             <Button
                 android:id="@+id/buyButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:minHeight="45dp"
                 android:layout_alignParentRight="true"
-                android:text="Đặt vé"
-                android:textSize="10dp"
                 android:fontFamily="@font/montserrat_bold"
-                />
+                android:minHeight="45dp"
+                android:padding="5dp"
+                android:text="Đặt vé"
+                android:textSize="10dp" />
         </RelativeLayout>
     </LinearLayout>
 
