--- a/app/src/main/res/layout/activity_admin_bus.xml
+++ b/app/src/main/res/layout/activity_admin_bus.xml
@@ -10,12 +10,10 @@
         android:id="@+id/adminBusRV"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusListHeader"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/admin_bus_search_filter" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusListHeader"
@@ -65,4 +63,65 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:id="@+id/admin_bus_search_filter"
+        app:layout_constraintTop_toBottomOf="@+id/adminBusListHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="10dp"
+            android:orientation="horizontal"
+            >
+
+            <Button
+                android:id="@+id/adminBusFilterBusType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Loại xe"
+                android:layout_marginLeft="1dp"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/teal_700"
+                android:fontFamily="@font/montserrat"
+                android:drawableLeft="@drawable/ic_bus"
+                android:textSize="12dp"
+                android:minHeight="35dip"
+                android:paddingHorizontal="10dp"
+                />
+            <Button
+                android:id="@+id/adminBusFilterBusOperator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nhà xe"
+                android:layout_marginLeft="10dp"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/teal_700"
+                android:fontFamily="@font/montserrat"
+                android:drawableLeft="@drawable/ic_ticket"
+                android:textSize="12dp"
+                android:minHeight="35dip"
+                android:paddingHorizontal="10dp"
+                />
+            <Button
+                android:id="@+id/adminBusFilterBusPricing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Giá"
+                android:layout_marginLeft="10dp"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/teal_700"
+                android:fontFamily="@font/montserrat"
+                android:drawableLeft="@drawable/ic_money"
+                android:textSize="12dp"
+                android:minHeight="35dip"
+                android:paddingHorizontal="10dp"
+                />
+
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
