--- a/app/src/main/res/layout/activity_admin_bus_ticket.xml
+++ b/app/src/main/res/layout/activity_admin_bus_ticket.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adminBusTicketListHeader"
+        app:layout_constraintTop_toBottomOf="@+id/admin_bus_ticket_search_filter"
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -54,4 +54,55 @@
             app:layout_constraintVertical_bias="0.515" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ScrollView
+        android:id="@+id/admin_bus_ticket_search_filter"
+        app:layout_constraintTop_toBottomOf="@+id/autoVe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="10dp"
+            android:orientation="horizontal"
+            >
+
+            <Button
+                android:id="@+id/adminBusTicketFilterBusType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Trạng thái"
+                android:layout_marginLeft="1dp"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/teal_700"
+                android:fontFamily="@font/montserrat"
+                android:drawableLeft="@drawable/ic_square_check_solid"
+                android:textSize="12dp"
+                android:minHeight="35dip"
+                android:paddingHorizontal="10dp"
+                />
+
+        </LinearLayout>
+    </ScrollView>
+
+    <AutoCompleteTextView
+        android:id="@+id/autoVe"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="15dp"
+        android:completionThreshold="1"
+        android:drawableStart="@drawable/ic_search"
+        android:drawablePadding="5dp"
+        android:padding="10dp"
+        android:hint="Tìm kiếm dựa trên tiêu đề"
+        android:textColorHint="#C6C6C6"
+        android:background="@drawable/custom_form_input"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/adminBusTicketListHeader" />
 </androidx.constraintlayout.widget.ConstraintLayout>
