--- a/app/src/main/res/layout/admin_bus_ticket_item.xml
+++ b/app/src/main/res/layout/admin_bus_ticket_item.xml
@@ -34,13 +34,13 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="80dp"
+                    android:layout_width="58dp"
                     android:layout_height="match_parent">
 
                     <ImageView
                         android:id="@+id/adminBusTicketImgV"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="39dp"
+                        android:layout_height="33dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -85,13 +85,14 @@
                         android:id="@+id/adminBusTicketSeatVal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
+                        android:layout_marginTop="28dp"
                         android:fontFamily="@font/montserrat_bold"
                         android:gravity="center"
                         android:text="Seat 26"
                         android:textColor="@color/blue"
                         android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.733"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
