--- a/app/src/main/res/layout/fragment_operator_filter_item.xml
+++ b/app/src/main/res/layout/fragment_operator_filter_item.xml
@@ -9,17 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-    <TextView
-        android:id="@+id/itemName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bằng Phấn"
-        android:textColor="@color/button_color"
-        android:fontFamily="@font/montserrat_medium"
-        android:textSize="17dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        />
+
+        <TextView
+            android:id="@+id/itemName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="Bằng Phấn"
+            android:textColor="@color/button_color"
+            android:textSize="17dp" />
 
     <RadioButton
         android:id="@+id/radioButtonSelect"
