--- a/app/src/main/res/layout/danh_gia.xml
+++ b/app/src/main/res/layout/danh_gia.xml
@@ -114,9 +114,21 @@
                     android:background="@color/attribute_gray" />
 
                 <TextView
+                    android:id="@+id/them_binh_luan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Thêm bình luận"
+                    android:textColor="@color/blue"
+                    android:textSize="16sp" />
+
+                <TextView
                     android:id="@+id/textView34"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
                     android:fontFamily="@font/montserrat"
                     android:text="Chi tiết đánh giá"
