--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -227,7 +227,7 @@
                                 android:focusable="false"
                                 android:fontFamily="@font/montserrat_bold"
                                 android:shadowColor="#fff"
-                                android:text="3/25/2023"
+                                android:text=""
                                 android:textSize="18sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
